--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,17 @@
-sonar.sources=src
-sonar.python.coverage.reportPaths=coverage.xml
+# sonar.sources=src
+# sonar.python.coverage.reportPaths=coverage.xml
 
+sonar.projectKey=Worasuda9_static_analysis_lab
+sonar.organization=worasuda9
+
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=static_analysis_lab
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
